# kalasetu-submission

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  app.py  codecov.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
backend/: index.js
backend/Controllers/: AuthController.js
backend/Models/: Session.js  User.js
backend/Routes/: GenerateRouter.js  ProductRouter.js  SessionRouter.js
docs/: README.md  index.md
evals/: evaluate.py
fine-tune/: finetune.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.js  RefrshHandler.js
frontend/src/components/: OutputViewer.js  PromptInput.js  Sidebar.js
frontend/src/pages/: ChatPage.js  Login.js  Signup.js
graphics_agent/: README.md  engine.py  main.py  schemas.py
kubernetes/: deployment.yml  service.yml
stubs/: kalasetu.pyi
tests/: conftest.py  test_app.py
video_agent/: README.md  engine.py  main.py  schemas.py
video_agent/assets/music/: README.md
voice_agent/: README.md  engine.py  main.py  schemas.py
voice_agent/assets/ambience/: README.md
