[tool.poetry]
name = "kalasetu"
version = "0.1.0"
description = "A multi-modal AI content generation platform"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
unsloth = "^0.0.1"
peft = "^0.3.0"
torch = "^1.11.0"
transformers = "^4.19.2"
datasets = "^2.2.2"
python-multipart = "^0.0.5"
pandas = "^1.4.2"
accelerate = "^0.9.0"
bitsandbytes = "^0.37.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
