[metadata]
name = kalasetu
version = 0.1.0
author = Your Name
author_email = you@example.com
description = A multi-modal AI content generation platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/kalasetu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    fastapi
    uvicorn
    unsloth
    peft
    torch
    transformers
    datasets
    python-multipart
    pandas
    accelerate
    bitsandbytes

[options.extras_require]
dev =
    pytest
